Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.8.0
-
None
Description
Currently integrations of Qt Location (and depending modules) are blocked by a compilation error:
qdeclarativegeomap.cpp:1500:38: error: ‘class QQuickWindowPrivate’ has no member named ‘itemForTouchPointId’
This is caused by an (internal) API change in qtdeclarative: https://codereview.qt-project.org/#/c/165685/18
Attachments
Issue Links
- is duplicated by
-
QTBUG-56212 Qt Location autotests disabled
-
- Closed
-
- relates to
-
QTBUG-56213 Zoom slider in the mapviewer example doesn't work on touchscreens
-
- Closed
-
For Gerrit Dashboard: QTBUG-55229 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
167542,3 | QDeclarativeGeoMap::sendTouchEvent: fix compilation | dev | qt/qtlocation | Status: MERGED | +2 | 0 |
172468,3 | Flickable: respect keepMouseGrab again | 5.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
172516,7 | Fix mouse and touch grabbing issues | 5.8 | qt/qtdeclarative | Status: MERGED | +2 | 0 |