QDeclarativeGeoMap::sendTouchEvent: fix compilation

Commit eb238e2cf9013f9a6cd20af0a59180896abdc377 got rid of
QQuickWindowPrivate::itemForTouchPointId by keeping track of the
grabbers in the event points.

Task-number: QTBUG-55229
Change-Id: Icc4bcc987937ee299a47d8aa43147adc53369f47
Reviewed-by: Paolo Angelelli <paolo.angelelli@theqtcompany.com>
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>